nativeclient_issues/3479/comments/1
<ns0:entry xmlns:ns0="http://www.w3.org/2005/Atom" xmlns:ns1="http://schemas.google.com/g/2005" xmlns:ns2="http://schemas.google.com/projecthosting/issues/2009" ns1:etag="W/&quot;D0MBQ347eCl7ImA9WhFTFk4.&quot;">
		<ns0:id>http://code.google.com/feeds/issues/p/nativeclient/issues/3479/comments/full/1</ns0:id><ns0:author>
			<ns0:name>kschi...@google.com</ns0:name><ns0:uri>/u/108470876877739532758/</ns0:uri></ns0:author><ns0:content type="html">The error is:

/usr/local/google/home/kschimpf/clients/nc-10/native_client/pnacl/git/llvm/tools/llc/llc.cpp:391:11: error: use of undeclared identifier 'StrErr'; did you mean 'StrError'?
          StrErr = "Don't understand specified bitcode format";
          ^~~~~~
          StrError
</ns0:content><ns0:updated>2013-06-07T20:04:12.000Z</ns0:updated><ns0:published>2013-06-07T20:04:12.000Z</ns0:published><ns2:updates>
			<ns2:label>-Mstone-</ns2:label><ns2:label>-Pri-2</ns2:label><ns2:label>-Component-</ns2:label><ns2:label>-OS-</ns2:label><ns2:label>-Arch-</ns2:label><ns2:label>Mstone-29</ns2:label><ns2:label>Pri-1</ns2:label><ns2:label>Component-PNaCl</ns2:label><ns2:label>Arch-ARM</ns2:label><ns2:status>Started</ns2:status><ns2:ownerUpdate>kschi...@google.com</ns2:ownerUpdate></ns2:updates><ns0:title>Comment 1 by kschi...@google.com</ns0:title><ns0:link href="http://code.google.com/p/nativeclient/issues/detail?id=3479#c1" rel="alternate" type="text/html" /><ns0:link href="https://code.google.com/feeds/issues/p/nativeclient/issues/3479/comments/full/1" rel="self" type="application/atom+xml" /></ns0:entry>